# mindscan

./: .env  .env.example  .gitignore  ARCHITECTURE.md  CLOSING_SUMMARY.md  DEV_GUIDE.md  Dockerfile  ESTRATEGIA_SALVAMENTO_ORION.md  LICENSE_INOVEXA.txt  OBSERVABILITY_GUIDE.md  PERFORMANCE_GUIDE.md  README-COMPLIANCE.md  README.md  README_CI_CD.md  README_TESTES.md  TREE_MindScan.txt  __init__.py  auditar_mindscan.py  auto_testar_http_mindscan.py  backup_incremental_mindscan.py  build_all.bat  create_mindscan_core_zip.bat  create_mindscan_zip.bat  create_mindscan_zip.py  criar_atalho_backup.vbs  database.py  diagnostico_mindscan_SAFE.py  docker-compose.yml  docker_up_mindscan.py  executar_backup_incremental.bat  executar_revisor_global.bat  full_tree.json  full_tree.txt  generate_init_files.py  gerar_tree_referencia.bat  governance_metadata.json  iniciar_mindscan.bat  instalador_mindscan.py  large-objects.txt  limpa-repo.ps1  (+55 more)
.ssh/: id_ed25519  id_ed25519.pub  mindscan_github  mindscan_github.pub
_logging_fix_backup/: scan_logging_conflicts.py
admin/: admin_router.py
analytics/: analytics_router.py  analytics_service.py  live_metrics_router.py  live_metrics_service.py
audios/: WhatsApp Ptt 2025-11-26 at 10.36.05 (1)_transcricao.txt  WhatsApp Ptt 2025-12-05 at 12.58.56_transcricao.txt  WhatsApp Ptt 2025-12-05 at 13.00.27_transcricao.txt  WhatsApp Ptt 2025-12-05 at 13.15.44_transcricao.txt  WhatsApp Ptt 2025-12-05 at 13.24.26_transcricao.txt  WhatsApp Ptt 2025-12-05 at 13.25.36_transcricao.txt  WhatsApp Ptt 2025-12-08 at 09.07.39_transcricao.txt  WhatsApp Ptt 2025-12-08 at 09.08.44 (1)_transcricao.txt  WhatsApp Ptt 2025-12-08 at 09.09.54 (1)_transcricao.txt  (+2 more)
backend/: .env  (+36 more)
(+1644 files in other folders)
