[metadata]
name = mindscan-pdf
version = 1.0.0
description = MindScan PDF Engine - Relatórios psicoprofissionais Premium
author = Inovexa Software
author_email = contato@inovexa.com
license = Proprietary
license_file = LICENSE
long_description = file: README.md
long_description_content_type = text/markdown

[options]
packages = find:
include_package_data = True
python_requires = >=3.9
install_requires =
    weasyprint>=60.0
    reportlab>=4.0.0
    matplotlib>=3.8.0

[options.package_data]
mindscan_pdf = 
    templates/*.html
    templates/*.css
    templates/*.svg

[options.entry_points]
console_scripts =
    mindscan-pdf = mindscan_pdf.cli:main

[sdist]
formats = zip

[bdist_wheel]
universal = 1
